<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CIS Project</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email address</string>
    <string name="passenger_signup">Passenger Only</string>
    <string name="passenger">Passenger</string>

    <string name="driver">Driver</string>

    <string name="signup">Sign up</string>
    <string name="logIn">Log in</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="empty"> </string>

    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="log_out">LOG OUT</string>
    <string name="edit"><u>change</u></string>
    <string name="save"><u>save</u></string>

    <string name="forgot">Forgot password?</string>
    <string name="newUser">Sign Up</string>
    <string name="submit">SUBMIT</string>
    <string name="school_logo">school_logo</string>
    <string name="title_activity_driver">DriverActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Ride History</string>
    <string name="menu_tools">Report</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_safety">Safety</string>
    <string name="title_activity_passenger">PassengerActivity</string>


    <string-array name="locations">
        <item></item>>
        <item>Brecon</item>
        <item>Bryn Mawr Station</item>
        <item>Campus Center</item>
        <item>Canaday Library</item>
        <item>Carpenter Library</item>
        <item>Campus Safety</item>
        <item>Denbigh</item>
        <item>Erdman</item>
        <item>Goodhart</item>
        <item>Gym</item>
        <item>Health Center</item>
        <item>Merion</item>
        <item>New Dorm</item>
        <item>Park</item>
        <item>Pembroke</item>
        <item>Radnor</item>
        <item>Rhoads</item>
        <item>Rockfeller</item>
    </string-array>

</resources>