<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.upenn.cis350.cisproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="edu.upenn.cis350.cisproject.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="edu.upenn.cis350.cisproject.ui.ridehistory.RideHistoryFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_rideHistory" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="edu.upenn.cis350.cisproject.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="edu.upenn.cis350.cisproject.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        android:onClick="logout" />

    <fragment
        android:id="@+id/nav_safety"
        android:name="edu.upenn.cis350.cisproject.ui.safety.SafetyFragment"
        android:label="@string/menu_safety"
        tools:layout="@layout/fragment_safety" />
</navigation>