<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:id="@+id/signup_layout"
    android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:contentDescription="@string/school_logo"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/school_logo" />

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:gravity="center">

            <TextView
                android:id="@+id/choosePassenger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/passenger_signup"
                android:textColor="@color/grey" />


        </LinearLayout>
        <TextView
            android:text="@string/email"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:paddingStart="7dp"
            android:textColor="@color/grey"/>

        <EditText
            android:id="@+id/signup_email"
            android:outlineProvider="paddedBounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:hint="@string/empty"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:importantForAutofill="no" />

        <TextView
            android:text="@string/phoneNumber"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:paddingStart="7dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/grey"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/empty"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:importantForAutofill="no" />

        <TextView
            android:text="@string/passowrd"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:paddingStart="7dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/grey"/>

        <EditText
            android:id="@+id/singup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/empty"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="0dp" >


            <TextView
                android:id="@+id/logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:text="@string/logIn"
                android:onClick="logIn"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:gravity="center"

                />
        </LinearLayout>

        <Button
            android:background="@color/white_greyish"
            android:id="@+id/signup_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="3dp"
            android:text="@string/signup"
            android:onClick="senddatatoserver"
            android:layout_gravity="center"
            android:textColor="#009688"
            android:textSize="17sp"
            android:textStyle="bold" />



</LinearLayout>