<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

<ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="80dp"
    android:layout_marginBottom="100dp"
    android:src="@drawable/school_logo"
    android:contentDescription="@string/school_logo"/>

<LinearLayout
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingTop="0dp"
    android:layout_gravity="center">

    <Button
        android:id="@+id/signup"

        android:background="@color/white_greyish"
        android:layout_marginTop="20dp"
        android:padding="3dp"
        android:layout_gravity="center"
        android:textColor="#009688"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="signUp"
        android:text="@string/signup" />

    <Button
        android:id="@+id/logIn"
        android:background="@color/white_greyish"
        android:layout_marginTop="20dp"
        android:padding="3dp"
        android:layout_gravity="center"
        android:textColor="#009688"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="logIn"
        android:text="@string/logIn"/>

</LinearLayout>


</LinearLayout>

